# fastsecure

./: README.md  pyproject.toml
.github/workflows/: linting.yml  tests.yml  type-check.yml
fastsecure/: __init__.py
fastsecure/core/: manager.py  strategies.py
fastsecure/password/: __init__.py  base.py  bcrypt.py
fastsecure/providers/: base.py  jwt.py  session.py
fastsecure/providers/oauth/: base.py  github.py  google.py
fastsecure/providers/storage/: base.py  db.py  memory.py  redis.py
tests/: conftest.py  test_auth.py  test_manager.py  test_oauth.py  test_password.py  test_storage.py  test_strategies.py
